finished the project without the collapse bouns

--- a/index.html
+++ b/index.html
@@ -5,16 +5,144 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>Project 1</title>
 </head>
 <body>
-    
+<!--section 0-->
+<section id="container">
+    <nav id="navBar">
+            <ul id="navList">
+            </ul>
+    </nav>
+</section>
+<!--section 1-->
+<section class="section" id="section1" class>
+    <h1>Section 1</h1>
+    <pre>
+        
+'''
+The pain itself is important to the main adipisicing elite. Extremely flexible
+The annoyances which even the advantage must be repudiated are the result of the pleasures of toil
+never let any one of them flatter him, but he hates to shun the just flight of the present
+choice and success! None of the accusers foresee something similar, however. Truth
+he is obliged to be blinded by his rights, so as to cause some annoyance to the architect of his pleasure
+nothing will result in any fault or responsibility! It prevents it from seeking, and hates;
+the error is bound, they do not know the very debts which some of them have. Find fault with
+because Where should avoidance or error be repudiated? The very annoyances of praising them
+wise offices, but are they ready to receive the sort of service? But to some
+otherwise the accepted error is to obtain the most challenging of these efforts. Encounter
+they don't know the slightest pain! Obligations to the right of things
+some but fun times. Let the toils be free from the pains
+let him escape, for in times of advantage to the just freedom of the great soothes
+follow up! Please take the least advantage of repudiating here
+and pain. To seek provident advantageous enhanced pardon similar to
+I will explain all of them very often, pleasure, here pleasure resultant
+shun the pains of choosing rather than eagerness to welcome greater resilience to hardship
+which one receives? No, please. Let him seek pleasure, not an architect by praising him
+there are ways to be the least of times, they are to blame, never to be accepted
+the whole idea of ​​pleasure is that of exercise in flight. We can apologize to any one of them
+as if to choose some one, who would please the body?
+'''
+    </pre>
+
+</section>
+<!--section 2-->
+<section class="section" id="section2" class>
+    <h1>Section 2</h1>
+    <pre>
+
+'''
+The pain itself is important to the main adipisicing elite. Extremely flexible
+The annoyances which even the advantage must be repudiated are the result of the pleasures of toil
+never let any one of them flatter him, but he hates to shun the just flight of the present
+choice and success! None of the accusers foresee something similar, however. Truth
+he is obliged to be blinded by his rights, so as to cause some annoyance to the architect of his pleasure
+nothing will result in any fault or responsibility! It prevents it from seeking, and hates;
+the error is bound, they do not know the very debts which some of them have. Find fault with
+because Where should avoidance or error be repudiated? The very annoyances of praising them
+wise offices, but are they ready to receive the sort of service? But to some
+otherwise the accepted error is to obtain the most challenging of these efforts. Encounter
+they don't know the slightest pain! Obligations to the right of things
+some but fun times. Let the toils be free from the pains
+let him escape, for in times of advantage to the just freedom of the great soothes
+follow up! Please take the least advantage of repudiating here
+and pain. To seek provident advantageous enhanced pardon similar to
+I will explain all of them very often, pleasure, here pleasure resultant
+shun the pains of choosing rather than eagerness to welcome greater resilience to hardship
+which one receives? No, please. Let him seek pleasure, not an architect by praising him
+there are ways to be the least of times, they are to blame, never to be accepted
+the whole idea of ​​pleasure is that of exercise in flight. We can apologize to any one of them
+as if to choose some one, who would please the body?
+'''
+    </pre>
 
 
 
+</section>
+<!--section 3-->
+<section class="section" id="section3" class>
+    <h1>Section 3</h1>
+    <pre>
+
+'''
+The pain itself is important to the main adipisicing elite. Extremely flexible
+The annoyances which even the advantage must be repudiated are the result of the pleasures of toil
+never let any one of them flatter him, but he hates to shun the just flight of the present
+choice and success! None of the accusers foresee something similar, however. Truth
+he is obliged to be blinded by his rights, so as to cause some annoyance to the architect of his pleasure
+nothing will result in any fault or responsibility! It prevents it from seeking, and hates;
+the error is bound, they do not know the very debts which some of them have. Find fault with
+because Where should avoidance or error be repudiated? The very annoyances of praising them
+wise offices, but are they ready to receive the sort of service? But to some
+otherwise the accepted error is to obtain the most challenging of these efforts. Encounter
+they don't know the slightest pain! Obligations to the right of things
+some but fun times. Let the toils be free from the pains
+let him escape, for in times of advantage to the just freedom of the great soothes
+follow up! Please take the least advantage of repudiating here
+and pain. To seek provident advantageous enhanced pardon similar to
+I will explain all of them very often, pleasure, here pleasure resultant
+shun the pains of choosing rather than eagerness to welcome greater resilience to hardship
+which one receives? No, please. Let him seek pleasure, not an architect by praising him
+there are ways to be the least of times, they are to blame, never to be accepted
+the whole idea of ​​pleasure is that of exercise in flight. We can apologize to any one of them
+as if to choose some one, who would please the body?
+'''
+    </pre>
 
 
 
+</section>
+<!--section 4-->
+<section class="section" id="section4" class>
+    <h1>Section 4</h1>
+    <pre>
+
+'''
+The pain itself is important to the main adipisicing elite. Extremely flexible
+The annoyances which even the advantage must be repudiated are the result of the pleasures of toil
+never let any one of them flatter him, but he hates to shun the just flight of the present
+choice and success! None of the accusers foresee something similar, however. Truth
+he is obliged to be blinded by his rights, so as to cause some annoyance to the architect of his pleasure
+nothing will result in any fault or responsibility! It prevents it from seeking, and hates;
+the error is bound, they do not know the very debts which some of them have. Find fault with
+because Where should avoidance or error be repudiated? The very annoyances of praising them
+wise offices, but are they ready to receive the sort of service? But to some
+otherwise the accepted error is to obtain the most challenging of these efforts. Encounter
+they don't know the slightest pain! Obligations to the right of things
+some but fun times. Let the toils be free from the pains
+let him escape, for in times of advantage to the just freedom of the great soothes
+follow up! Please take the least advantage of repudiating here
+and pain. To seek provident advantageous enhanced pardon similar to
+I will explain all of them very often, pleasure, here pleasure resultant
+shun the pains of choosing rather than eagerness to welcome greater resilience to hardship
+which one receives? No, please. Let him seek pleasure, not an architect by praising him
+there are ways to be the least of times, they are to blame, never to be accepted
+the whole idea of ​​pleasure is that of exercise in flight. We can apologize to any one of them
+as if to choose some one, who would please the body?
+'''
+    </pre>
+</section>
+<!--Including JavaScript-->
     <script src="js/app.js"></script>
 </body>
 </html>
