--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/c543f32d04.js" crossorigin="anonymous"></script>
     <title>Project 1</title>
 </head>
 <body>
+    <a name="top"></a>
 <!--section 0-->
 <section id="container">
     <nav id="navBar">
@@ -141,6 +143,7 @@ the whole idea of ​​pleasure is that of exercise in flight. We can apologize
 as if to choose some one, who would please the body?
 '''
     </pre>
+<button onclick="topFunction()" id="btnUp"><a href="#top"><i class="fa-solid fa-circle-up"></i></a></button>
 </section>
 <!--Including JavaScript-->
     <script src="js/app.js"></script>
