--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@ the whole idea of ​​pleasure is that of exercise in flight. We can apologize
 as if to choose some one, who would please the body?
 '''
     </pre>
-<button onclick="topFunction()" id="btnUp"><a href="#top"><i class="fa-solid fa-circle-up"></i></a></button>
 </section>
+<button onclick="topFunction()" id="btnUp"><i class="fa-solid fa-circle-up"></i></button>
+
 <!--Including JavaScript-->
     <script src="js/app.js"></script>
 </body>
